--- a/mypreamble.tex
+++ b/mypreamble.tex
@@ -2,9 +2,14 @@
 \setbeamersize{text margin left=10pt,text margin right=10pt}
 \usetheme{lehigh}
 
+
 \usefonttheme{professionalfonts}
 \usefonttheme{serif}
 
+
+\pgfdeclarelayer{background}
+\pgfdeclarelayer{foreground}
+\pgfsetlayers{background,main,foreground}
 %\usepackage{pgf,pgfarrows,pgfnodes,pgfautomata,pgfheaps,pgfshade}
 %\usepackage{amsmath,amssymb,amsfonts,subfigure,pifont}
 \usepackage{multirow,multicol}
@@ -77,7 +82,6 @@ deletekeywords={\dots},              % if you want to delete keywords from the g
 }
 
 \lstdefinestyle{customc}{
-  basicstyle=\scriptsize\ttfamily,
   belowcaptionskip=1\baselineskip,
   breaklines=true,
   xleftmargin=\parindent,
@@ -127,9 +131,12 @@ deletekeywords={\dots},              % if you want to delete keywords from the g
 
 \algrenewcommand\algorithmicfunction{\textbf{program}}
 \algblockdefx[Program]{Program}{EndProgram}[1]{\textbf{program} \textsc{#1}}[1]{\textbf{end program} \textsc{#1}}
+
 \algloopdefx[doloop]{Do}[1]{\textbf{do} #1}
 \algcblockdefx[doloop]{If}{Do}{EndDo}
 [1]{\textbf{do} #1}{\textbf{end do}}
+
+
 
 
 \usepackage{tikz}
@@ -138,7 +145,7 @@ deletekeywords={\dots},              % if you want to delete keywords from the g
 \pgfdeclarelayer{background}
 \pgfdeclarelayer{foreground}
 \pgfsetlayers{background,main,foreground}
-\usepackage[latin1]{inputenc}
+%\usepackage[latin1]{inputenc}
 \usepackage[english]{babel}
 \usepackage{hyperref}
 \usepackage[normalem]{ulem}
@@ -184,18 +191,33 @@ deletekeywords={\dots},              % if you want to delete keywords from the g
 {
 \setbeamercolor{upperblock}{fg=#1,bg=#2}
 \setbeamercolor{lowerblock}{fg=#3,bg=#4}
-\begin{beamerboxesrounded}[upper=upperblock,lower=lowerblock,shadow=true]}
+\begin{beamerboxesrounded}[upper=upperblock,lower=lowerblock,shadow=false]}
 {\end{beamerboxesrounded}}
 \newenvironment{ablock}[0]
 {
-\begin{beamerboxesrounded}[upper=uppercol,lower=lowercol,shadow=true]}
+\begin{beamerboxesrounded}[upper=uppercol,lower=lowercol,shadow=false]}
 {\end{beamerboxesrounded}}
 \newenvironment{bblock}[0]
 {
-\begin{beamerboxesrounded}[upper=uppercol1,lower=lowercol1,shadow=true]}
+\begin{beamerboxesrounded}[upper=uppercol1,lower=lowercol1,shadow=false]}
 {\end{beamerboxesrounded}}
 \newenvironment{eblock}[0]
 {
-\begin{beamerboxesrounded}[upper=uppercol2,lower=lowercol2,shadow=true]}
+\begin{beamerboxesrounded}[upper=uppercol2,lower=lowercol2,shadow=false]}
 {\end{beamerboxesrounded}}
+
+% LOGOS
+\pgfdeclareimage[height=0.55cm]{lucolor-logo}{LehighU_official-logo_Color.png}
+\rplogo{\pgfuseimage{lucolor-logo}}
+\pgfdeclareimage[height=0.55cm]{luwhite-logo}{LehighU_official-logo_White.png}
+\tplogo{\pgfuseimage{luwhite-logo}}
+% footer logo
+%\pgfdeclareimage[width=0.3\paperwidth]{university-logo}{lulogo}
+%\tllogo{\pgfuseimage{university-logo}}
+
+%titlepage logo
+%\titlegraphic{\includegraphics[scale=0.5]{lu}}
+
+\beamertemplateballitem
+
 
